--- a/lscdsUser/templates/profile.html
+++ b/lscdsUser/templates/profile.html
@@ -1,21 +1,60 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% block title %}Account Profile{% endblock %}
+
+{% load form_utils %}
+{% load lscds_tags %}
+
+{% block title %} Account Profile{% endblock %}
+
 
 {% block main %}
+
+
 <h1>Welcome {{user.get_full_name}}</h1>
 <div class='row'>
 <div class='col-md-6'>
-
 <legend>Your profile</legend>
-                {% crispy form  %}
+            
 
- 
+<table id="user" class="table table-bordered table-striped">
+    <tbody> 
+ <tr> <td style="width: 100px"> Email:</td>  <td> {{ object.email}}   </td>  <tr> 
+
+
+
+
+
+        {% for field in form %}
+        <tr> 
+{% if field|is_select %}
+    <td style="width: 100px">     {{ field.errors }}
+        {{ field.label_tag }}</td>
+    <td> <a href="#" class="myeditable" data-type="select" data-name="{{field.name}}" data-source ='{{field|select_options}}'>{{ field|value_text}}  </a><i class="icon-pencil pencil-input-change"></i> </td>
+{% elif field|is_checkbox %}
+  <td style="width: 100px">     {{ field.errors }}
+        {{ field.label_tag }}</td>
+
+<td class="myeditable" > {{field}}</td>
+{% else %}
+{% endif %}
+
+ </tr> 
+
+        {% endfor %}
+
+</tbody>
+</table>
+<div>
+    <button id="save-btn" class="btn btn-primary">Update Profile</button>
+ </div>
+
+
+
 </div> <!-- End of col-6  -->
 <div class='col-md-6'>
 <div class='col-md-12'>
-<legend>Your registrations</legend>
+<legend>Your event registrations</legend>
 
 {% for event in  registered_list %}
 <ul>
@@ -83,6 +122,45 @@ success: function(data)
 }
 }); /// end ajax call
 }); // end form submission
+
+// In line editting
+$.fn.editable.defaults.mode = 'inline';
+$('.myeditable').editable({
+placement: 'right',
+validate: function(v) {
+   if(!v) return 'Required field!';
+   }
+   });
+
+$('.icon-pencil').click(function(e){    
+       e.stopPropagation();
+      //$(this).closest($('.myeditable').editable('toggle'));
+    $var = $(this).closest('td').find('.editable')
+    $var.editable('toggle')
+    console.log($var)
+    $('.icon-pencil').hide();
+});
+// Show the pencil on click
+  $(document).on('click', '.editable-cancel, .editable-submit', 'body', function(){
+        $('.icon-pencil').show();
+        }) 
+
+
+//create new user
+$('#save-btn').click(function() {
+                     var data=[]
+var array = {}
+
+                     $('a.myeditable').each(function(){
+
+                                            array[$(this).attr('data-name')]=$(this).text()
+                                            data.push(array)      
+                                                                                   })  
+     console.log(JSON.stringify(array))
+
+
+}); 
+
  }); // End of doccument ready
                        </script>
-                       {% endblock %}
+ {% endblock %}
