--- a/templates/zinnia/skeleton.html
+++ b/templates/zinnia/skeleton.html
@@ -3,18 +3,14 @@
 
 {% load i18n staticfiles %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xml:lang="{{ LANGUAGE_CODE }}" lang="{{ LANGUAGE_CODE }}" version="-//W3C//DTD XHTML 1.1//EN" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title> Weblog - {% block title %}{% endblock title %}{% block title-page %}{% endblock title-page %}</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="cache-control" content="public" />
-    <meta name="robots" content="follow, all" />
-    <meta name="language" content="{{ LANGUAGE_CODE }}" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{% block meta-description %}{% trans "Just another Zinnia weblog." %}{% endblock meta-description %}{% block meta-description-page %}{% endblock meta-description-page %}" />
-    <meta name="keywords" content="{% block meta-keywords %}django, blog, weblog, zinnia{% endblock meta-keywords %}" />
-    <meta name="author" content="Fantomas42" />
-    {% block meta %}{% endblock meta %}
+       {% block title %}Weblog - {% block title-page %}{% endblock title-page %}{% endblock title %}
+      {% block meta %}
+
+    <meta name="description" content="{% block meta-description %}{% trans "LSCDS Blog." %}{% endblock meta-description %}{% block meta-description-page %}{% endblock meta-description-page %}" />
+    <meta name="keywords" content="{% block meta-keywords %}{% endblock meta-keywords %}" />
+        
+    
+    {% endblock meta %}
     <link rel="pingback" href="/xmlrpc/" />
     <link rel="shortcut icon" href="{% static "zinnia/img/favicon.ico" %}" />
     <link rel="home" href="{% url 'zinnia:entry_archive_index' %}" />
@@ -25,8 +21,7 @@
     <![endif]-->
     {% block link %}{% endblock link %}
     {% block script %}{% endblock script %}
-  </head>
-  <body class="zinnia {% block theme-class %}default{% endblock theme-class %} {% block color-class %}blue{% endblock color-class %} {% block sidebar-class %}right-sidebar{% endblock sidebar-class %} {% block body-class %}{% endblock body-class %}">
+  <div class="zinnia {% block theme-class %}default{% endblock theme-class %} {% block color-class %}blue{% endblock color-class %} {% block sidebar-class %}right-sidebar{% endblock sidebar-class %} {% block body-class %}{% endblock body-class %}">
     <div class="container">
       <div id="header">
         <ul class="top-navigation">
@@ -79,11 +74,9 @@
         {% endblock sidebar %}
       </div>
       <div id="footer">
-        <p>{% blocktrans %}Powered by <a href="http://www.djangoproject.com">Django</a> and <a href="https://github.com/Fantomas42/django-blog-zinnia">Zinnia {{ ZINNIA_VERSION }}</a>.{% endblocktrans %}</p>
-      </div>
+              </div>
     </div>
-  </body>
-</html>
+  </div>
 
 {% endblock main %}
 
