--- a/templates/base.html
+++ b/templates/base.html
@@ -385,10 +385,13 @@
                 </div><!--/wrapper-->
 
                 <!-- JS Global Compulsory -->           
-                <script type="text/javascript" src="{%static "assets/plugins/jquery/jquery.min.js" %}"></script>
-                <script type="text/javascript" src="{%static "assets/plugins/jquery/jquery-migrate.min.js" %}"></script>
-                <script type="text/javascript" src="{%static "assets/plugins/bootstrap/js/bootstrap.min.js" %}"></script> 
-                <script type="text/javascript" src="{%static "assets/plugins/flexslider/jquery.flexslider-min.js" %}"></script>
+
+
+                <script type="text/javascript" src="{% static "assets/plugins/jquery/jquery.min.js" %}"></script>
+                <script type="text/javascript" src="{% static "assets/plugins/jquery/jquery-migrate.min.js" %}"></script>
+                <script type="text/javascript" src="{% static "assets/plugins/bootstrap/js/bootstrap.min.js" %}"></script> 
+                <script type="text/javascript" src="{% static "assets/plugins/flexslider/jquery.flexslider-min.js" %}"></script>
+                     <script type="text/javascript" src="{% static "js/jquery.fancybox.js" %}"></script>
 
                 <!-- JS Implementing Plugins -->           
                 <script type="text/javascript" src="{%static "assets/plugins/back-to-top.js" %}"></script>
@@ -396,10 +399,19 @@
                 <script type="text/javascript" src="{%static "assets/js/custom.js" %}"></script>
                 <!-- JS Page Level -->           
                 <script type="text/javascript" src="{%static "assets/js/app.js" %}"></script>
-                <script type="text/javascript">
-                    jQuery(document).ready(function() {
-                                           App.init();      
-                                           App.initSliders();                
+
+                {% block javascript %}{% endblock %}
+
+
+<script type="text/javascript">
+ jQuery(document).ready(function() {
+ App.init();      
+ App.initSliders();   
+ $(".fancybox").fancybox({
+                type: "image",
+                  padding : 0
+    }); 
+
 
                                            });
                                        </script>
@@ -408,8 +420,7 @@
                                        <script src="assets/plugins/html5shiv.js"></script>
                                        <script src="assets/js/plugins/placeholder-IE-fixes.js"></script>
                                        <![endif]-->
-                                       {% block javascript %}{% endblock %}
-
+                                      
 
 
                                    </body>
