--- a/templates/photologue/root.html
+++ b/templates/photologue/root.html
@@ -1,7 +1,21 @@
 {% extends "base.html" %}
 
 {% block main %}
- {% block content %} 
+
+<div class = 'col-md-9'>
+
+{% block content %} 
 
 {% endblock %}
+</div>
+
+
+<div class = 'col-md-3'>
+{% block side_bar %} 
+
+{% endblock %}
+
+
+    </div>
+
  {% endblock %}
