--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,6 @@
             {% load static %}
             {% load url from future %}
             {% load i18n %}
-
-
             <head>
                   <title>
 
@@ -161,18 +159,18 @@
                                         <ul class="dropdown-menu">
                                             <!-- About Pages -->
                                             <li>
-                                            <a href="#mission">Our Mission</a>                                                                
+                                            <a href="{% url 'about' %}#mission">Our Mission</a>                                                                
                                             </li>
                                             <!-- End About Pages -->
                                             <li>
-                                            <a href="#mission">Our team</a>                                                                
+                                            <a href="{% url 'about' %}#mission">Our team</a>                                                                
                                             </li>
                                             <!-- End About Pages -->
 
 
                                             <!-- Job Pages -->
                                             <li>
-                                            <a href="#facts">LSCDS Facts</a>                                                            
+                                            <a href="{% url 'about' %}#facts">LSCDS Facts</a>                                                            
                                             </li>
                                             <!-- End Job Pages -->
                                         </ul>
@@ -183,10 +181,14 @@
                                         <li class="dropdown">
                                         <a href="{% url 'event:event-list' %}">Our Events</a>  
                                         <ul class="dropdown-menu">
-                                            <li><a href="#">Seminar series</a></li>
-                                            <li><a href="#">Networking</a></li>
-                                            <li><a href="#">Career Day</a></li>
-
+                                            {% if context_eventtype %}
+                                            {% for ent in context_eventtype %}
+                                            <li><a href="{% url 'event:event-detail' slug=ent.slug %}">{{ent.name}}</a></li>
+                                           {% empty %}
+                                                 <li><a href="#">Seminar series</a></li>
+                                           {% endfor %}
+                                            {% endif%}
+                                           
                                         </ul>
                                         </li>                    
                                         <!-- End Events -->
