--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,14 +1,15 @@
-{% extends "registration/registration_base.html" %}
+{% extends "profile.html" %}
 {% load i18n %}
-
+{% load crispy_forms_tags %}
 {% block title %}{% trans "Change password" %}{% endblock %}
-
-{% block content %}
+{% block profile_block %}
+<div class='control-group col-md-6 col-md-offset-2'>
 <form method="post" action="">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% crispy form %}
     <input type="submit" value="{% trans 'Change password' %}" />
 </form>
+</div>
 {% endblock %}
 
 
