--- a/lscdsUser/templates/profile.html
+++ b/lscdsUser/templates/profile.html
@@ -10,178 +10,26 @@
 
 {% block main %}
 
+<h3>Hi {{user.get_full_name}}</h3>
 
-<h1>Welcome {{user.get_full_name}}</h1>
-<div class='row'>
-<div class='col-md-6'>
-<legend>Your profile</legend>
-                <div id="msg" class="alert hide"></div>
-
-<table id="user" class="table table-bordered table-striped">
-    <tbody> 
- <tr> <td style="width: 100px"> Email:</td>  <td> {{ object.email}}   </td>  <tr> 
-
-
-
-
-
-        {% for field in form %}
-        <tr> 
-{% if field|is_select %}
-    <td style="width: 100px">     {{ field.errors }}
-        {{ field.label_tag }}</td>
-    <td> <a href="#" class="myeditable" data-pk={{user.pk}} data-value={{field.value}}  data-type="select" data-name="{{field.name}}" data-source ='{{field|select_options}}'>{{ field|value_text}}  </a><i class="icon-pencil pencil-input-change"></i> </td>
-
-{% elif field|is_checkbox %}
- <td style="width: 100px">     {{ field.errors }}
-        {{ field.label_tag }}</td>
-    <td> <a href="#" class="myeditable" data-pk={{user.pk}}  data-type="select" data-value={{field.value}}  data-name="{{field.name}}" data-source ='[{value:"True","text":"Yes"},{value:"False","text":"No"}]'>{{ field}}  </a><i class="icon-pencil pencil-input-change"></i> </td>
-
-
-{% else %}
-
-{% endif %}
-
- </tr> 
-
-        {% endfor %}
-
-</tbody>
-</table>
-
-
-</div> <!-- End of col-6  -->
-<div class='col-md-6'>
-<div class='col-md-12'>
-<legend>Your event registrations</legend>
-
-{% for event in  registered_list %}
-<ul>
-    <li>{{event.event.name}}
-           <form class="registration"  action="." method="post">
-            {% csrf_token %}
-            <input type="hidden" name="event_id" value="{{event.event.pk}}">
-            <input type="submit" value="Cancel registration" class="submit" />
-        </form>
-        </li>
-</ul> 
-
-    {% empty %}
-    No event in this category
-
-    {% endfor %}
-</div> <!-- End of col-12  -->
-<div class='col-md-12'>
-<legend>Upcoming events</legend>
-
-{% for event in  not_registered_list %}
-<ul>
-    <li>{{event.name}}</li>
-           <form class="registration"  action="." method="post">
-            {% csrf_token %}
-            <input type="hidden" name="event_id" value="{{event.pk}}">
-            <input type="submit" value="Register for this event" class="submit" />
-        </form>
-    </span>
-</ul>
-
-
-    {% empty %}
-    No event in this category
-
-    {% endfor %}
-
-</div> <!-- End of col-12  -->
-
-</div> <!-- End of col-6  -->
-
-
-
-</div> <!-- End of row-->
-
+ <ul class="nav nav-justified nav-tabs">
+     <li><a href="{% url 'profile-event' %}">Event Registration</a></li>
+     <li><a  href="{% url 'profile-update' %}">Update Profile</a></li>
+    <li><a  href="{% url 'profile-notification' %}">Notification Settings</a></li>
+    <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
+        </ul>  
+        <div class='container' style='padding-top:50px;'>
+{% block profile_block %}
 
 
 
 {% endblock %}
+</div>
+
+{% endblock %}
 
 {% block javascript %}
-<script type="text/javascript">
-jQuery(document).ready(function() {
-$('.registration').on('submit',function(e){
-e.preventDefault()
-var url = $(this).attr('action')
-$.ajax({
-type: "POST",
-url: url,
-data: $(this).serialize(), // serializes the form's elements.
-success: function(data)
-{
-//alert(data); // show response from the php script.
 
-}
-}); /// end ajax call
-}); // end form submission
 
-// In line editting
-$.fn.editable.defaults.mode = 'inline';
-$('.myeditable').editable({
-placement: 'right',
-url:'/profile/', 
-validate: function(v) {
-   if(!v) return 'Required field!';
-   },
-params: function(params) {
-//originally params contain pk, name and value
-newParams = {}
-$('a.myeditable').each(function(){
-  newParams[$(this).attr('data-name')]=$(this).attr('data-value')                     
-  })
-newParams[params.name]=params.value
-newParams.pk = params.pk;
-    return newParams;
-}   
-   
-});// End editable
+{% endblock %}
 
-$('.icon-pencil').click(function(e){    
-       e.stopPropagation();
-      //$(this).closest($('.myeditable').editable('toggle'));
-    $var = $(this).closest('td').find('.editable')
-    $var.editable('toggle')
-    console.log($var)
-    $('.icon-pencil').hide();
-});
-// Show the pencil on click
-  $(document).on('click', '.editable-cancel, .editable-submit', 'body', function(){
-        $('.icon-pencil').show();
-        }) 
-
-$.ajaxSetup({
-    beforeSend: function(xhr, settings) {
-        if (settings.type == 'POST' || settings.type == 'PUT' || settings.type == 'DELETE') {
-            function getCookie(name) {
-                var cookieValue = null;
-                if (document.cookie && document.cookie != '') {
-                    var cookies = document.cookie.split(';');
-                    for (var i = 0; i < cookies.length; i++) {
-                        var cookie = jQuery.trim(cookies[i]);
-                        // Does this cookie string begin with the name we want?
-                        if (cookie.substring(0, name.length + 1) == (name + '=')) {
-                            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                            break;
-                        }
-                    }
-                }
-                return cookieValue;
-            }
-            if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
-                // Only send the token to relative URLs i.e. locally.
-                xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
-            }
-        }
-    }
-});
-
- }); // End of doccument ready
-                       </script>
- {% endblock %}
