--- a/templates/event/eventtype_detail.html
+++ b/templates/event/eventtype_detail.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'base_sidebar.html' %}
+
 {% load staticfiles %}
 {% load static %}
-{% block main %}
+{% block main_sidebar %}
 
 
 <h2> {{ object.name }}</h2>
